# Vandaler

./: .gitignore  Makefile  README.md
art/: README.md  assets.json
art/source/backgrounds/: malmo_stage_tiles.json  malmo_stage_tiles_report.json
art/source/sprite_lab/: README.md  audit_current.json
audio/instruments/vand_furnace_core/: ATTRIBUTION.md  bank.vand-instruments.json  fm_grinder.vand-instrument.json  growl.vand-instrument.json  growl_bass_wobbly.vand-instrument.json  neatguitarmultialg_alt1.vand-instrument.json  octave_arp.vand-instrument.json  psg_echo_warble.vand-instrument.json
audio/licenses/: ATTRIBUTION.md
docs/: ai_music_model_inventory.md  audio_pipeline.md  malmo_music_notes.md  megadrive_instrument_research.md  research.md  vand-ai-lism-ai-toolchain-plan.md
res/: resources.res
src/: audio_test.c  audio_test.h  main.c  malmo_music.c  malmo_music.h  stage_tiles.h  vand_audio.c  vand_audio.h
tools/: assets.sh  build_sprite_cycles.py  build_sprites.py  build_stage_tiles.py  build_title.py  convert_source_sheet.py  extract_initial_sources.py  import_pose_sheet.py  m68k-elf-ar  m68k-elf-gcc  m68k-elf-ld  m68k-elf-nm  m68k-elf-objcopy  paint_object_sources.py  sprite_lab.py
tools/audio/: md_audio_lab.py  run_step_audio_editx_probe.sh  setup_vand_ai_lism_ai.sh
tools/audio/audio_lab/: Cargo.toml
tools/audio/oxide_probe/: Cargo.toml
tools/audio/vand_ai_lism/: main.js  settings.example.toml  styles.css
tools/audio/vand_ai_lism/src-tauri/: Cargo.toml  tauri.conf.json
tools/audio/vand_ai_lism/src-tauri/src/: main.rs
(+5 files in other folders)
