[package]
name = "vand-ai-lism"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = "2.6.2"

[dependencies]
euther_oxide = { path = "/home/nichlas/EutherOxide" }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = [] }
